@@ -46,9 +46,9 @@
 #include "ats_types.h"
 
 /* ****** ****** */
-
-// the function [alloca] is declared in
-extern void *alloca (size_t nsz) ; // [alloca.h]
+//
+// HX: the function [alloca] is declared in
+extern void *alloca (size_t nsz) ; // [alloca.h] or [stdlib.h]
 
 #define ATS_ALLOCA(sz) alloca(sz)
 #define ATS_ALLOCA2(n, sz) alloca((n)*(sz))
