@@ -78,6 +78,11 @@ for chatting about ATS.
 
 <HR SIZE=6 ALIGN=LEFT><P>
 
+The <A href="http://news.gmane.org/gmane.comp.lang.ats.user"><FONT size="+1">archive</FONT></A>
+of ATS user's mailing-list.
+
+<HR SIZE=6 ALIGN=LEFT><P>
+
 <FONT size="+1"><B> <A
 href="http://en.wikibooks.org/wiki/ATS:_Programming_with_Theorem-Proving">ATS/PwTP</A>
 </B></FONT>&nbsp; A wikibook on programming in <A href="http://www.ats-lang.org">ATS</A>
