@@ -9,7 +9,7 @@
 #
 #  ATS - Unleashing the Power of Types!
 #
-#  Copyright (C) 2002-2007 Hongwei Xi.
+#  Copyright (C) 2002-2010 Hongwei Xi.
 #
 #  ATS is free software;  you can  redistribute it and/or modify it under
 #  the terms of the GNU LESSER GENERAL PUBLIC LICENSE as published by the
