@@ -6,6 +6,8 @@ ats-lang-anairiats-0.2.5:
    the bug had not shown up earlier.
 2. input_line_vt is added in prelude/filebas for returning a linear string
 3. Fixing a bug in [valprim_is_mutable]: casting was incorrectly handled.
+4. atslib_feof and atslib_ferror are changed to inlined functions (instead
+   of macros). This is done to fix Cgwin defining feof as a macro.
 
 ########################################################################
 
